# encar-listing

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/scraper/: client.py  schemas.py  service.py
backend/app/services/: car_service.py
backend/tests/: test_scraper.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CarCard.tsx  FilterBar.tsx  Footer.tsx  Header.tsx  Hero.tsx
frontend/src/lib/: api.ts
nginx/: nginx.conf
